# RubiksCube-TwophaseSolver

./: README.md  RubiksCube-TwophaseSolver.rar  client_gui.py  client_gui2.py  co_classidx  co_rep  co_sym  computer_vision.py  conj_twist  conj_ud_edges  coord.py  cubie.py  defs.py  enums.py  example.py  face.py  fs_classidx  fs_rep  fs_sym  misc.py  move_corners  move_d_edges  move_flip  move_slice_sorted  move_twist  move_ud_edges  moves.py  performance.py  phase2_cornsliceprun  phase2_edgemerge  phase2_edgesliceprun  pruning.py  server.py  setup.cfg  sockets.py  solver.py  start_server.py  symmetries.py  vision.py  vision2.py  (+1 more)
.github/workflows/: lint_python.yml
package_src/twophase/: client_gui.py  client_gui2.py  computer_vision.py  coord.py  cubie.py  defs.py  enums.py  face.py  misc.py  moves.py  performance.py  pruning.py  server.py  sockets.py  solver.py  start_server.py  symmetries.py  vision2.py
